<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbHorizontal="@color/black"
    android:scrollbarThumbVertical="@color/black"
    tools:context=".MainActivity">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_cameraTilt="60.0"
        mapbox:mapbox_cameraZoom="22">

        <LinearLayout
            android:id="@+id/scan"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:background="@drawable/circle"
            android:orientation="horizontal"
            android:rotationX="60" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <com.ramotion.circlemenu.CircleMenuView
            android:id="@+id/circleMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            app:button_colors="@array/color"
            app:button_icons="@array/icons"
            app:distance="60dp"
            app:icon_color="@android:color/white">

        </com.ramotion.circlemenu.CircleMenuView>

    </com.mapbox.mapboxsdk.maps.MapView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:visibility="invisible"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:id="@+id/popUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4A2DADD1"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:text="@string/titleform"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/titlepromo"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/promoC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:backgroundTint="#322F26"
                    android:ems="10"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/titleoffre"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/offreC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#322F26"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/titleduration"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/timeC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#322F26"
                    android:ems="10"
                    android:inputType="time" />
            </LinearLayout>

            <Button
                android:id="@+id/photo"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/titlephoto" />

            <ImageView
                android:id="@+id/imageCapt"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:contentDescription="imageCaptured" />

            <Button
                android:id="@+id/submit"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/titlesubmit" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</FrameLayout>